used existing class for spacing and then corrected user photo on thread page

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1736,9 +1736,6 @@ form [type='radio'] {
     padding: 10px;
     background-color: #34a334;
 }
-#explore_threads,#profile_threads,#thread_threads {
-  margin-top: 30px;
-}
 #threads li, #comments li {
   margin-bottom: 30px;
 }
